--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,12 @@ rust_decimal_macros = "1.34.2"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.115"
 tokio = { version = "1.37.0", features = ["full"] }
+toml = "0.8.14"
+
+# Covenant contracts
+single-party-pol-covenant = { package = "valence-covenant-single-party-pol", path = "../covenants/contracts/single-party-pol-covenant", features = ["library"] }
+swap-covenant = { package = "valence-covenant-swap", path = "../covenants/contracts/swap-covenant", features = ["library"] }
+two-party-pol-covenant = { package = "valence-covenant-two-party-pol", path = "../covenants/contracts/two-party-pol-covenant", features = ["library"] }
 
 [profile.release]
 lto = true
