2-party POL covenant validation

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,9 +24,11 @@ tokio = { version = "1.37.0", features = ["full"] }
 toml = "0.8.14"
 
 # Covenant contracts
+covenant-utils = { package = "covenant-utils", git = "https://github.com/timewave-computer/covenants", tag = "v0.1.0" }
 single-party-pol-covenant = { package = "valence-covenant-single-party-pol", git = "https://github.com/timewave-computer/covenants", tag = "v0.1.0", features = ["library"] }
 swap-covenant = { package = "valence-covenant-swap", git = "https://github.com/timewave-computer/covenants", tag = "v0.1.0", features = ["library"] }
 two-party-pol-covenant = { package = "valence-covenant-two-party-pol", git = "https://github.com/timewave-computer/covenants", tag = "v0.1.0", features = ["library"] }
+astroport-liquid-pooler = { package = "valence-astroport-liquid-pooler", git = "https://github.com/timewave-computer/covenants", tag = "v0.1.0", features = ["library"] }
 
 [profile.release]
 lto = true
