--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ anyhow = "1.0.81"
 async-trait = "0.1.80"
 base16ct = "0.2.0"
 base64 = "0.22.0"
+bech32 = "0.11.0"
 clap = { version = "4.5.4", features = ["derive"] }
 dotenv = "0.15.0"
 itertools = "0.12.1"
